@@ -44,7 +44,12 @@ pub struct Opt {
     /// explicitly given with '--size', the progress bar cannot indicate how
     /// close to completion the transfer is, so it will not be shown even if
     /// this option is not specified.
-    #[arg(long, conflicts_with("format"), conflicts_with("quiet"))]
+    #[arg(
+        long,
+        conflicts_with("format"),
+        conflicts_with("quiet"),
+        conflicts_with("bar_style")
+    )]
     pub no_progress: bool,
 
     /// Hide the elapsed time.
@@ -72,7 +77,12 @@ pub struct Opt {
     pub no_bytes: bool,
 
     /// Hide the spinner.
-    #[arg(long, conflicts_with("format"), conflicts_with("quiet"))]
+    #[arg(
+        long,
+        conflicts_with("format"),
+        conflicts_with("quiet"),
+        conflicts_with("spinner_style")
+    )]
     pub no_spinner: bool,
 
     /// Set output format to <FORMAT>.
@@ -81,8 +91,7 @@ pub struct Opt {
         long,
         value_name("FORMAT"),
         conflicts_with("quiet"),
-        conflicts_with("si"),
-        conflicts_with("name")
+        conflicts_with("si")
     )]
     pub format: Option<String>,
 
@@ -93,7 +102,9 @@ pub struct Opt {
         conflicts_with("si"),
         conflicts_with("size"),
         conflicts_with("interval"),
-        conflicts_with("name")
+        conflicts_with("name"),
+        conflicts_with("bar_style"),
+        conflicts_with("spinner_style")
     )]
     pub quiet: bool,
 
@@ -116,6 +127,18 @@ pub struct Opt {
     /// Prefix the output information with <NAME>.
     #[arg(short('N'), long, value_name("NAME"))]
     pub name: Option<String>,
+
+    /// Set the progress characters to <STRING>.
+    #[arg(short('u'), long, value_name("STRING"))]
+    pub bar_style: Option<String>,
+
+    /// Set the tick character sequence or the tick string sequence for the
+    /// spinner to <STRING>.
+    ///
+    /// If this option takes multiple <STRING>, it sets the tick string
+    /// sequence, otherwise it sets the tick character sequence.
+    #[arg(long, num_args(1..), value_name("STRING"))]
+    pub spinner_style: Option<Vec<String>>,
 
     /// Use a transfer buffer size of <BYTES> bytes.
     ///
